--- a/TODO
+++ b/TODO
@@ -9,13 +9,17 @@ can handle video input
 audio
   
 distribute with avisynth.dll, add to end of PATH
-  
+  just graphedit 4 now...with instructions
+
 == maybe ==
 
 scripting coolness for it somehow
 demos
   "box in box" script demo LOL
-  
+
+"on the fly" graphedit creation
+  the same, but with "on the fly" better selection of output type "from that pin" somehow
+
 == never ==
 
 automagic dragging demos
