--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,127 +1,3 @@
-0.6.5
+0.0.1
 
-better audio sniffer, hopefully
-
-0.6.4
-
-better installer, "scaling" registry settings are said to work now.
-; fix ffplay resize bug, cleanup some dshow code, add debug/benchmarking
-0.6.3 5/8/12
-
-bump virtual audio version
-
-0.6.2 4/27/12
-
-fix for i420 color output looking grey :P
-add some more parameters for internal "scaling" if you want to have windows do that for you, before passing it off down the pipe.
-rename some parameters
-speedup! (well, if you don't have aero installed) max 100fps -> 250 fps
-fix benchmarker to be slightly more realistic.
-
-default is 16 bit capture now, in an attempt to make it more speedy. Tell me if you don't want/like this though!
-
-0.6.1 4/26/12
-
-add i420 output support for flash media live encoder. Yikes.
-"synchronize" the output fps better, for VLC sake.  It still lets you specify an fps that your system
-can't actually do, in the which case you'll get messages like:
-
-
-avcodec warning: almost fed libavcodec with two frames with the same PTS (754903828860)
-avcodec warning: almost fed libavcodec with two frames with the same PTS (754903862193)
-stream_out_transcode debug: drift is too high, resetting master sync
-stream_out_transcode debug: drift is too high, resetting master sync
-
-see http://forum.videolan.org/viewtopic.php?f=4&t=99906
-
-
-0.6.0 4/24/12
-
-fix mouse if using hwnd, allow for hex input to command line script input utility (also has a window input utility).
-
-Add *tons* more options in the registry, also make it so you can specify a small window if desired, ex: vlc's --dshow-size="100x100" [crops currently, subject to change!]
-
-new registry options:
-
-'disable_aero_for_vista_plus_if_1', 'track_new_x_y_coords_each_frame_if_1', 
-    'dedup_if_1', 'millis_to_sleep_between_poll_for_dedupe_changes'
-
-0.5.0 4-10-12
-
-add "optional" hwnd_to_track registry setting.  Currently if the window "goes away" then it will just grab black.
-If it doesn't exist at start time, it raises an exception.
-"delete" the registry key if you want to clear it.
-
-0.4.0 2-12
-
-fix mouse bug, make it "really" respond to registry changes for window size (window can move)
-
-0.3.9 2-27-12
-  make it respond to registry changes for (for now just position, not size...ask me if you want the other)
-
-0.3.8 1-5-12 
-  bring audio skipper back to a known release
-  minor verbiage tweaks
-
-0.3.7 1-3-12
-  allow it to work on multiple monitors.
-
-0.3.6 12-2-11
-  bump virtual audio device version
-  add ability to restart audio broadcaster
-
-0.3.5 oct 20 11
-  remove CAPTUREBLT oops
-
-0.3.4 10-14-11
-  make it work with XP again
-
-0.3.3 9-28-11
-  make an easy out way when starting audio server
-
-0.3.2 9-27-11
-  make it so that recorder can record anything, make it slightly more robust, too.
-    too bad it uses so much disk space...
-  add mouse
-  
-0.3.1 9-26-11
-  add a hopefully working, hopefully human friendly self-broadcaster...
-
-0.3.0 9-23-11
- allow SetFormat to accept NULL so that it won't crash flash player. Added an interface, too, but it's un-used I doubt.
-
-0.2.5: 9-21-11:
-  fix bug so that VLC will accept it for capture (I consider it VLC's bug, but hey, that's just me :P)
-    ok so part my bug, part theirs
-  minor aesthetics.
-  bundle the audio device driver for vista+ participants
-
-0.2.4: 09-19-11:
-  attempt to not register as IAMStreamSource
-  small speedup by preferring 24 bps as the default over 32
-
-0.2.3: 9-16-11:
-  allow to change fps with dialog
-
-0.2.2:
-  make it respond more accurately to GetStreamCaps, for enumeration to work (ffmpeg better at least) and it appears to work better with gstreamer as well.
-  minor UI tweaks
-
-0.2.1:
-  make it easier to re-register on failed etc.
-
-0.2.0: 
-  Even better window drawer (now transparent with java 7)
-  slightly optimized screen capture (optimized to not use CPU currently, creates huges files though!)
-  it still uses too much cpu, but working on it.
-  default to 24 fps (hmm)
-
-0.1.1: Better window drawer (kind of)
-
-0.1.0: has a friendlier script for recording screen, another option for setting it up
-
-0.0.4: Include more executables, including the option to record now [!]
-
-0.0.2: better name, report "better" stats to the capture device.
-
-0.0.3: respects fps settings, in its own kludgey way.  Should work though, and not cause any slowdown if you can't keep up anyway :)
+Working 
