--- a/TODO
+++ b/TODO
@@ -1,25 +1,19 @@
 = todo =
 
-variable filename, gui for choosing it
-
-audio, separate file uh guess
-
-use version.avs as default after an install.  Only if key doesn't exist? huh?
-
 == maybe ==
 
+advertise msdn, doom9
 
-scripting coolness for it somehow
 demos
   "box in box" script demo LOL
 
+== never ==
+audio, separate file uh guess
+
 "on the fly" graphedit creation
   the same, but with "on the fly" better selection of output type "from that pin" somehow
-
-== never ==
 distribute with avisynth.dll, add to end of PATH
   just graphedit 4 now...with instructions
-
 
 automagic dragging demos
 it can "notice changed mtime and reload the avisynth" for auto transitioningsing
