new download loc

--- a/TODO
+++ b/TODO
@@ -2,11 +2,13 @@
 
 release
 
-advertise doom9, respond to other email
+advertise doom9
 
 == maybe ==
 
-advertise msdn, doom9
+not releasing right? (with debug mode screen capture)
+
+advertise msdn
 
 demos
   "box in box" script demo LOL
