--- a/TODO
+++ b/TODO
@@ -2,9 +2,11 @@
 
 == maybe ==
 
-advertise msdn,  "Avisynth Usage"
+it goes at half fps speed? huh?
 
 == never ==
+
+advertise msdn,  "Avisynth Usage"
 
 not releasing right? (with debug mode screen capture)
 audio, separate file uh guess
